--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/evaluacion_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/evaluacion_admin.html
@@ -27,6 +27,20 @@
                 </li>
             </ul>
         </div>
+        <div class="w3-panel  w3-margin-bottom">
+                <ul class="w3-ul w3-light-grey w3-center w3-card-4">
+                    <li class="w3-dark-grey w3-xlarge w3-padding-32">Grupo <i class="fas fa-user-tie"></i></li>
+    
+                        <li class="w3-padding-16"> {{grupo}} </i>
+                        </li>
+                        <!-- Despliegue de evaluadores
+        <li class=" w3-padding-16 presentado"> Evaluador 2 <i style="margin-left: 10px"
+            class="far fa-check-circle"><i class="w3-small"> ya evaluó</i></i>
+        </li>
+        <li class="w3-padding-16"> Evaluador 3 <i style="margin-left: 10px" class="w3-large fas fa-times"></i></li>-->
+                </ul>
+        </div>
+
 
         <div class="w3-row-padding" style="margin-top:30px">
             <div class="w3-half w3-margin-bottom ">
@@ -34,25 +48,41 @@
                     <li class="w3-dark-grey w3-xlarge w3-padding-32">Miembros del equipo <i
                             class="fas fa-user-friends"></i>
                     </li>
-                    <li class="presentado w3-padding-16">Pablo Aliaga <i class="far fa-check-circle"></i> <i
-                            class="w3-small">ya presentó</i></li>
-                    <li class="w3-padding-16">Bastián Matamala</li>
-                    <li class="presentado w3-padding-16">Camila Quilape <i class="far fa-check-circle"></i><i
-                            class="w3-small">ya presentó</i></li>
-                    <li class=" w3-padding-16">Andrea Park</li>
+                    {% for a in alumnos%}
+                    <li class="presentado w3-padding-16">{{a.nombre}} {{a.apellido}} {% if a.presento %}<i class="far fa-check-circle"></i><i class="w3-small">ya presentó</i>{% endif %}</li>
+                    {% endfor %}
                 </ul>
             </div>
 
             <div class="w3-half w3-margin-bottom ">
-                <ul class="w3-ul w3-light-grey w3-center w3-card-4">
-                    <li class="w3-dark-grey w3-xlarge w3-padding-32">Miembros que presentan <i
-                            class="fas fa-chalkboard-teacher"></i></li>
-                    <li class="w3-padding-16">Andrea Park <i style="margin-left: 10px"
-                                                             class="w3-large fas fa-times"></i></li>
-                    <li class=" opcion w3-padding-16" id="mas"> Agregar otro <i style="margin-left: 10px"
+                <ul class="w3-ul w3-light-grey w3-center w3-card-4" id="Presentacion">
+                    <li class="w3-dark-grey w3-xlarge w3-padding-32">Miembros que presentan <i class="fas fa-chalkboard-teacher"></i></li>
+                    <li class=" opcion w3-padding-16" id="mas" onclick="getElementById('modificar_miembro').style.display='block'"> Agregar otro <i style="margin-left: 10px"
                                                                                 class="fas fa-user-plus"></i></li>
-
                 </ul>
+            </div>
+        </div>
+
+        <div id="modificar_miembro" class="w3-modal">
+            <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+                <div class="w3-center">
+                    <br>
+                    <span onclick="document.getElementById('modificar_miembro').style.display='none'" 
+                    class="w3-button w3-large w3-transparent w3-display-topright" title="Close Modal">x</span>
+                    <form id="form" method="POST" class="w3-container" action="{url 'agregar_alumno_presentacion'">
+                        <label><b>Alumno que Presentará</b></label>
+                        <select class="w3-input w3-border" name="nombre" required id="valorAlumno">
+                            {% for a in alumnos%}
+                                {% if a.presento %}
+                                  <option>{{a.nombre}}{{a.apellido}}</option>
+                                {% endif %}
+                            {% endfor%}
+                        </select>
+                        <button class="w3-button w3-block w3-red w3-section w3-padding"
+                                type="submit" onclick="modificar(document.getElementById('valorAlumno').value)">Agregar
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
         <!--TODO Arreglar el formateo de la nota de los criterios de evaluacion-->
@@ -64,6 +94,7 @@
         {% endfor %}
     </div>
     <!--Aqui van los bloques de cada criterio de la rubrica-->
+
     {% for asp in aspecto %}
         <div class="w3-panel  w3-margin-bottom">
             <ul class="w3-ul w3-light-grey w3-center w3-card-4">
@@ -72,7 +103,7 @@
                 {% for crit in criterios %}
                     {% if forloop.parentloop.counter == forloop.counter %}
                         {% for ble in crit %}
-                            <li class="opcion w3-padding-16" onclick="modificar()">{{ ble }} </li>
+                        <li class="opcion w3-padding-16" onclick="modificar(this.id)"  id={{asp}}{{ble}}>{{ ble }} </li>
                         {% endfor %}
                     {% endif %}
 
@@ -107,6 +138,13 @@
             else{
               x.className="opcion w3-padding-16 selected";
             }
+        }
+        function agregar(name){
+            var list=document.getElementById("Presentacion").getElementsByTagName("ul")[0];
+            var newItem=document.createElement("li");
+            var newText=document.createTextNode(name);
+            newItem.appendChild(newText);
+            list.appendChild(newItem);
         }
 
     </script>
