cambiada clase de boton ver en evaluacion.

--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluaciones_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluaciones_admin.html
@@ -108,7 +108,7 @@
         <!-- botones de ver y modificar evaluacion-->
         
 
-        <form action="{% url 'ver_grupos' o.evaluacion.id %}">
+        <form class="w3-button w3-large w3-red w3-round" action="{% url 'ver_grupos' o.evaluacion.id %}">
             <!-- ver evaluacion -->
             <button class="w3-button w3-large w3-red w3-round" type="submit">Ver</button>
         </form>
