pagina evaluacion del evaluador visualmente lista, falta logica de envio por detras

--- a/EvPresentaciones/templates/EvPresentaciones/Eval_interface/evaluacionesEvaluador.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Eval_interface/evaluacionesEvaluador.html
@@ -1,84 +1,55 @@
 {% extends 'EvPresentaciones/BASE/base_eval.html' %}
 {% block contenido %}
 
-    <!-- Header
-   <div class="w3-bar w3-border w3-pale-red">
-  <div class="w3-dropdown-hover w3-pale-red w3-mobile w3-xlarge"style="width:33%">
-    <button class="w3-button ">Evaluaciones</button>
-    <div class="w3-dropdown-content w3-bar-block w3-card-4"style="width:25%">
-      <a href="#" class="w3-bar-item w3-button">Link 1</a>
-      <a href="#" class="w3-bar-item w3-button">Link 2</a>
-      <a href="#" class="w3-bar-item w3-button">Link 3</a>
-    </div>
-  </div>
-       <div class="w3-dropdown-hover w3-pale-red w3-mobile w3-xlarge" style="width:33%">
-       <button class="w3-button ">Cursos</button>
-    <div class="w3-dropdown-content w3-bar-block w3-card-4">
-      <a href="#" class="w3-bar-item w3-button">Link 1</a>
-      <a href="#" class="w3-bar-item w3-button">Link 2</a>
-      <a href="#" class="w3-bar-item w3-button">Link 3</a>
-    </div>
-       </div>
-       <div class="w3-dropdown-hover w3-pale-red w3-mobile w3-xlarge" style="width:33%">
-       <button class="w3-button ">Rúbricas</button>
-    <div class="w3-dropdown-content w3-bar-block w3-card-4">
-      <a href="#" class="w3-bar-item w3-button">Link 1</a>
-      <a href="#" class="w3-bar-item w3-button">Link 2</a>
-      <a href="#" class="w3-bar-item w3-button">Link 3</a>
-    </div>
-       </div>
-</div>-->
-
-
-    <!-- Photo grid (modal) -->
-
     <!-- Evaluacion -->
-<!--Seccion rubricas-->
+    <!--Seccion rubricas-->
 
-{% for o in par %}
-  <button onclick="myFunction({{ o.id }})" class="w3-btn w3-red w3-block w3-margin"
-          style="width: 75%">
-      <h3>
-          Evaluación {{ o.fechaInicio }}</h3>
-  </button>
+    {% for o in par %}
+        <button onclick="myFunction({{ o.id }})" class="w3-btn w3-red w3-block w3-margin"
+                style="width: 75%">
+            <h3>
+                Evaluación {{ o.fechaInicio }}</h3>
+        </button>
 
-  <div id={{ o.id }} class="w3-hide w3-container w3-pale-red w3-padding-large w3-margin"
-  style="width: 75%">
-  
+        <div id={{ o.id }} class="w3-hide w3-container w3-pale-red w3-padding-large w3-margin"
+        style="width: 75%">
 
-  <p>
-  <li>Curso: 
-    {% for eval in cursos %}
-      {% if eval.evaluacion.id == o.id %}
-        {{eval.curso.nombre}}
-        {{eval.curso.codigo}}-{{eval.curso.seccion}}
-        {{eval.curso.semestre}}
-        {{eval.curso.año}}
-      {% endif %}      
+
+        <p>
+        <li>Curso:
+            {% for eval in cursos %}
+                {% if eval.evaluacion.id == o.id %}
+                    {{ eval.curso.nombre }}
+                    {{ eval.curso.codigo }}-{{ eval.curso.seccion }}
+                    {{ eval.curso.semestre }}
+                    {{ eval.curso.año }}
+                {% endif %}
+            {% endfor %}
+
+        </li>
+        <li>Estado: {{ o.estado }}</li>
+        </p>
+        <form id="evaluacion_evaluador" method="POST" action="{% url 'evaluacion' o.id %}">
+        {%  csrf_token %}
+            {% if o.estado != "Abierta" %}
+
+                <button class="w3-button w3-large w3-red w3-round" type="submit">Ver</button>
+            {% else %}
+                <button class="w3-button w3-large w3-red w3-round">Responder</button>
+            {% endif %}
+        </form>
+        </div>
     {% endfor %}
-    
-  </li>
-  <li>Estado: {{ o.estado }}</li>
-</p>
 
-{% if o.estado != "Activa" %}
-<button class="w3-button w3-large w3-red w3-round">Ver</button>
-{% else %}
-<button class="w3-button w3-large w3-red w3-round">Responder</button>
-{% endif %}
-
-  </div>
-{% endfor %}
-
-      </div>
-      <script>
-          function myFunction(id) {
-              var x = document.getElementById(id);
-              if (x.className.indexOf("w3-show") == -1) {
-                  x.className += " w3-show";
-              } else {
-                  x.className = x.className.replace(" w3-show", "");
-              }
-          }
-      </script>
-      {% endblock %}
+    </div>
+    <script>
+        function myFunction(id) {
+            var x = document.getElementById(id);
+            if (x.className.indexOf("w3-show") == -1) {
+                x.className += " w3-show";
+            } else {
+                x.className = x.className.replace(" w3-show", "");
+            }
+        }
+    </script>
+{% endblock %}
