Arreglado "Ver rúbrica" para destacar headers y no destacar contenido

--- a/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubrica_modificar.html
+++ b/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubrica_modificar.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="w3-container">
-            <table id="tabla-rubrica" class="orange">
+            <table id="tabla-rubrica">
                 <!-- Header de la rúbrica -->
                 <tr>
                     <th></th> <!-- Primera columna vacía no editable -->
