Cambiando aparencia evaluacion

--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Cursos_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Cursos_admin.html
@@ -25,70 +25,6 @@
             </div>
           </div>
         </div>
-        <!-- Carta de un curso -->
-        <div class="w3-quarter">
-            <div class="w3-card-2 w3-hover-shadow w3-light-gray w3-border w3-round"
-              onclick="document.getElementById('gestionar').style.display='block'"
-              style="max-height:400px;min-height: 350px;max-width: 200px;margin-top: 16px;">
-              <h3>Nombre de curso</h3><br>
-              <i class="fas fa-book" style="font-size:60px;"></i>
-              <p>Código</p>
-              <p>Sección</p>
-              <p>Semestre y año </p>
-              <div class="w3-row w3-center">
-                <button class="w3-btn w3-red">Modificar</button>
-                <button class="w3-btn w3-red">Eliminar</button>
-              </div>
-            </div>
-          </div>
-          <!-- Carta de un curso -->
-        <div class="w3-quarter">
-            <div class="w3-card-2 w3-hover-shadow w3-light-gray w3-border w3-round"
-              onclick="document.getElementById('gestionar').style.display='block'"
-              style="max-height:400px;min-height: 350px;max-width: 200px;margin-top: 16px;">
-              <h3>Nombre de curso</h3><br>
-              <i class="fas fa-book" style="font-size:60px;"></i>
-              <p>Código</p>
-              <p>Sección</p>
-              <p>Semestre y año </p>
-              <div class="w3-row w3-center">
-                <button class="w3-btn w3-red">Modificar</button>
-                <button class="w3-btn w3-red">Eliminar</button>
-              </div>
-            </div>
-          </div>
-          <!-- Carta de un curso -->
-        <div class="w3-quarter">
-            <div class="w3-card-2 w3-hover-shadow w3-light-gray w3-border w3-round"
-              onclick="document.getElementById('gestionar').style.display='block'"
-              style="max-height:400px;min-height: 350px;max-width: 200px;margin-top: 16px;">
-              <h3>Nombre de curso</h3><br>
-              <i class="fas fa-book" style="font-size:60px;"></i>
-              <p>Código</p>
-              <p>Sección</p>
-              <p>Semestre y año </p>
-              <div class="w3-row w3-center">
-                <button class="w3-btn w3-red">Modificar</button>
-                <button class="w3-btn w3-red">Eliminar</button>
-              </div>
-            </div>
-          </div>
-          <!-- Carta de un curso -->
-        <div class="w3-quarter">
-          <div class="w3-card-2 w3-hover-shadow w3-light-gray w3-border w3-round"
-            onclick="document.getElementById('gestionar').style.display='block'"
-            style="max-height:400px;min-height: 350px;max-width: 200px;margin-top: 16px;">
-            <h3>Nombre de curso</h3><br>
-            <i class="fas fa-book" style="font-size:60px;"></i>
-            <p>Código</p>
-            <p>Sección</p>
-            <p>Semestre y año </p>
-            <div class="w3-row w3-center">
-              <button class="w3-btn w3-red">Modificar</button>
-              <button class="w3-btn w3-red">Eliminar</button>
-            </div>
-          </div>
-        </div>
         <!--Carta de agregar-->
         <div class="w3-quarter">
           <div class="w3-card-2 w3-hover-shadow w3-light-gray w3-border w3-round"
@@ -106,7 +42,7 @@
           <div class="w3-center"><br>
             <span onclick="document.getElementById('agregar').style.display='none'"
               class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
-            <form class="w3-container" action="/action_page.php">
+            <form class="w3-container" action={"/action_page.php"}>
               <div class="w3-section">
                 <label><b>Curso</b></label>
                 <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Ingrese nombre del curso"
