--- a/EvPresentaciones/templates/EvPresentaciones/BASE/base.html
+++ b/EvPresentaciones/templates/EvPresentaciones/BASE/base.html
@@ -25,7 +25,7 @@
     <div class="w3-container">
         <p class="w3-center"><img src="{% static 'EvPresentaciones/images/avatar3.png' %}" class="w3-circle"
                                   style="height:200px;width:200px" alt="Avatar"></p>
-        <h3 class="w3-padding-64" style="text-align: center"><b>{{ user.get_username }} </b></h3>
+        <h3 class="w3-padding-64" style="text-align: center"><b>{{ user.first_name}} {{ user.last_name }}</b></h3>
     </div>
     <!--Navigation Links -->
     <div class="w3-bar-block">
@@ -43,7 +43,7 @@
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
     <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-    <span>{{ user.get_username }} </span>
+    <span>{{ user.first_name}} {{ user.last_name }}</span>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
