--- a/EvPresentaciones/templates/EvPresentaciones/BASE/base.html
+++ b/EvPresentaciones/templates/EvPresentaciones/BASE/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <head>
     <html lang="es">
-    <title>Plataforma de evaluación-Cursos</title>
+    <title>Plataforma de evaluación de Cursos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'EvPresentaciones/style.css' %}">
@@ -20,7 +20,7 @@
 <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;"
      id="mySidebar"><br>
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft"
-       style="width:100%;font-size:22px">Close Menu</a>
+       style="width:100%;font-size:22px">Cerrar Menú</a>
     <!--Profile image -->
     <div class="w3-container">
         <p class="w3-center"><img src="{% static 'EvPresentaciones/images/avatar3.png' %}" class="w3-circle"
@@ -30,13 +30,13 @@
     <!--Navigation Links -->
     <div class="w3-bar-block">
         <a href="{% url 'landing_page_admin' %}" onclick="w3_close()"
-           class="w3-bar-item w3-button w3-hover-white">Home</a>
+           class="w3-bar-item w3-button w3-hover-white">Inicio</a>
         <a href="{% url 'cursos_admin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cursos</a>
         <a href="{% url 'evaluadores_admin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluadores</a>
         <a href="{% url 'rubricas_admin' %}" onclick="w3_close()"
            class="w3-bar-item w3-button w3-hover-white">Rúbricas</a>
         <a href="{% url 'evaluaciones_admin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
-        <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+        <a href="{% url 'contactoAdmin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contacto</a>
     </div>
 </nav>
 
