--- a/EvPresentaciones/templates/EvPresentaciones/BASE/base_eval.html
+++ b/EvPresentaciones/templates/EvPresentaciones/BASE/base_eval.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <head>
 <html lang="es">
-<title>Plataforma de evaluación-Cursos</title>
+<title>Plataforma de evaluación de Cursos</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="{% static 'EvPresentaciones/style.css' %}">
@@ -16,7 +16,7 @@
 
   <!-- Sidebar/menu -->
   <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
-    <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Cerrar Menú</a>
     <!--Profile image -->
     <div class="w3-container">
       <p class="w3-center"><img src="{% static 'EvPresentaciones/images/avatar3.png' %}" class="w3-circle" style="height:200px;width:200px" alt="Avatar"></p>
@@ -24,9 +24,9 @@
     </div>
     <!--Navigation Links -->
     <div class="w3-bar-block">
-      <a href="{% url 'landing_page_eval' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
+      <a href="{% url 'landing_page_eval' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Inicio</a>
       <a href="{% url 'evaluaciones_eval' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
-      <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+      <a href="{% url 'contactoEval' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contacto</a>
     </div>
   </nav>
 
