Usado el rojo de la template

--- a/EvPresentaciones/templates/EvPresentaciones/Index.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Index.html
@@ -104,11 +104,11 @@
         color: #EF3B3A;
         }
         body {
-        background: #e20000; /* fallback for old browsers */
-        background: -webkit-linear-gradient(right, #e20000, #c6bdbb;
-        background: -moz-linear-gradient(right, #e20000, #c6bdbb);
-        background: -o-linear-gradient(right, #e20000, #c6bdbb);
-        background: linear-gradient(to left, #e20000, #c6bdbb);
+        background: #F44236; /* fallback for old browsers */
+        background: -webkit-linear-gradient(right, #F44236, #F44236;
+        background: -moz-linear-gradient(right, #F44236, #F44236);
+        background: -o-linear-gradient(right, #F44236, #F44236);
+        background: linear-gradient(to left, #F44236, #F44236);
         font-family: "Roboto", sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;      
